min-width: 40 em - on "rad" to prevent divs jumping around. Will not allow more than 20 tab-signs per row though - TEST!

--- a/StupidHarpTab.css
+++ b/StupidHarpTab.css
@@ -5,7 +5,7 @@
 }
 
 .rad {
- width:100%; clear:both; margin-bottom: 2em;
+ width:100%; min-width: 20em; clear:both; margin-bottom: 2em;
   }
 
 
